--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <div class="class">
         <button id="Class-1">Class-1</button>
         <button id="Class-2">Class-2</button>
+        <button id="Class-3">Class-3</button>
     </div>
 
 
@@ -47,6 +48,9 @@
         })
         document.getElementById("Class-2").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/mMZlqRL5UTeTMRRvalPdEXQkoCosO--DHjhFwAkhGa_tcFOy-jwyipst2A03Awak.05J7FkaOg0JceCh2";
+        })
+        document.getElementById("Class-3").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/zCAGUwey3yhz0PlmD1sQt0sEr6VJK5DPlhdcd1L9BUcMRCzh7n_G_aPbh_Kv5qKl.dXW8axNSyIz5eLaD";
         })
     </script>
 </body>
