--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #a9dbe5;
         }
 
         .container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -37,9 +37,10 @@
             padding: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: rgb(104, 201, 228);
+            background-color: #60cfed;
             border: none;
             border-radius: 5px;
+            
         }
     </style>
 </head>
@@ -47,8 +48,7 @@
 <body>
     <div class="container">
         <div class="meeting-info">
-            <h3>Meeting ID: 302 904 7187</h3>
-            <h3>Passcode: 235</h3>
+           <h1>Networking Fundamental Class</h1>
         </div>
         <div class="class-buttons">
             <button id="Class-1">1.Class-1</button>
