--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
         button {
             padding: 25px;
-            font-size: 16px;
+            font-size: 20px;
+            font-weight: 600;
             cursor: pointer;
             background-color: #60cfed;
             border: none;
