--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <button id="Class-2">2.Class-2/3</button>
             <button id="Class-3">3.Class-4</button>
             <button id="Class-4">4.Class-5/6</button>
+            <button id="Class-5">5.Class-5/6 Recap</button>
 
         </div>
     </div>
@@ -72,6 +73,9 @@
         });
         document.getElementById("Class-4").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/vB5ahDynR2r-0CuZj4IaUbvznrgOSR_McVp6oupULZAOcxwxf-bWClC0OsrgSULT.xPKfAjphdwJUYzZj";
+        });
+        document.getElementById("Class-5").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/LUCYe5Ftnzh6e8h-uiHLtw1LVmU76KRm_Mg1WhiyMQQcqjvmyjzpMwJtKtNYVfvP.S6ptqq5-5lURDcbJ";
         });
     </script>
 </body>
