--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <button id="Class-3">3.Class-4</button>
             <button id="Class-4">4.Class-5/6</button>
             <button id="Class-5">5.Class-5/6 Recap</button>
+            <button id="Class-6">6.Class-6</button>
 
         </div>
     </div>
@@ -76,6 +77,9 @@
         });
         document.getElementById("Class-5").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/LUCYe5Ftnzh6e8h-uiHLtw1LVmU76KRm_Mg1WhiyMQQcqjvmyjzpMwJtKtNYVfvP.S6ptqq5-5lURDcbJ";
+        });
+        document.getElementById("Class-6").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/_rZ74tyxRBs3mb-kfBtr13rFigzQgiIb8cgGfNUxcpz8YHbCKVAEwnrGO-0YFR0.R-DSlalwAku6gARF";
         });
     </script>
 </body>
