--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .container {
-            max-width: 700px;
+            max-width: 800px;
             margin: 50px auto;
             padding: 20px;
             background-color: #1acbee;
@@ -50,7 +50,8 @@
             color: white;
             border-radius: 10px;
             border: none;
-            box-shadow: 5px 9px 10px #201f1f;
+            box-shadow: 5px 9px 10px #2e2d2d;
+            font-size: 18px;
         }
     </style>
 </head>
