--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Media</title>
+    <title>Fundamental class</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background: linear-gradient(to right, #cc2b5e , #753a88)
-
         }
-
         .all {
-            margin: 10px 15px;
+            margin: 10px 14px;
         }
-
         .container {
             max-width: 800px;
             margin: 50px auto;
@@ -26,14 +23,12 @@
             border-radius: 8px;
             box-shadow: 5px 5px 20px rgb(49, 46, 46);
         }
-
         .title {
             text-align: center;
             margin-bottom: 20px;
             background: linear-gradient( red , blue);
 			-webkit-text-fill-color: transparent;
-			-webkit-background-clip: text;
-            
+			-webkit-background-clip: text;   
         }
         .class-buttons {
             display: grid;
@@ -69,7 +64,6 @@
                 <button id="Class-4">Class-4</button>
                 <button id="Class-5">Class-5</button>
                 <button id="Class-6">Class-6</button>
-
             </div>
         </div>
     </div>
