--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             border: none;
             box-shadow: 5px 9px 10px #2e2d2d;
             font-size: 18px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -64,6 +65,7 @@
                 <button id="Class-4">Class-4</button>
                 <button id="Class-5">Class-5</button>
                 <button id="Class-6">Class-6</button>
+                <button id="Class-7">Class-7</button>
             </div>
         </div>
     </div>
@@ -86,6 +88,9 @@
         });
         document.getElementById("Class-6").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/_rZ74tyxRBs3mb-kfBtr13rFigzQgiIb8cgGfNUxcpz8YHbCKVAEwnrGO-0YFR0.R-DSlalwAku6gARF";
+        });
+        document.getElementById("Class-7").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/JeT-DOHbKbjEjRS2_BgHhg5CPpL4nxxgLz_dwNZH872R7wUx3hFdZo_XR8fVu36l.Xs43ADM1VLBpXUe7 ";
         });
     </script>
 </body>
