--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <button id="Class-5">Class-5</button>
                 <button id="Class-6">Class-6</button>
                 <button id="Class-7">Class-7</button>
+                <button id="Class-8">Class-8</button>
             </div>
         </div>
     </div>
@@ -91,6 +92,9 @@
         });
         document.getElementById("Class-7").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/JeT-DOHbKbjEjRS2_BgHhg5CPpL4nxxgLz_dwNZH872R7wUx3hFdZo_XR8fVu36l.Xs43ADM1VLBpXUe7 ";
+        });
+        document.getElementById("Class-8").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/j0vrHupdOf6fiqx8Mxe92DZENXv6jmYR8ekqnsGcXGndcUu79z7e2exPyVN0psSu.qWJYfWXtR4yDk_AC";
         });
     </script>
 </body>
