--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <button id="Class-6">Class-6</button>
                 <button id="Class-7">Class-7</button>
                 <button id="Class-8">Class-8</button>
+                <button id="Class-9">Class-9</button>
             </div>
         </div>
     </div>
@@ -95,6 +96,9 @@
         });
         document.getElementById("Class-8").addEventListener("click", function () {
             window.location.href = "https://us06web.zoom.us/rec/share/j0vrHupdOf6fiqx8Mxe92DZENXv6jmYR8ekqnsGcXGndcUu79z7e2exPyVN0psSu.qWJYfWXtR4yDk_AC";
+        });
+        document.getElementById("Class-9").addEventListener("click", function () {
+            window.location.href = "https://us06web.zoom.us/rec/share/6pT30PbF2YZ5QNJU03AGQoVLhkPaYw9polUSgbJv6LMvCg9T5y0f6oY77HbIsaDj.blpK9K2Gg8gh7lXJ";
         });
     </script>
 </body>
